# heatTopology

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  TODO.txt  optimization.py  readme.md  results.txt  x.txt
Config_files/: format.txt
Results/: results.txt
etc/: helloworld
proto/: Eigen.cpp  adjointMethod.py  adjoint_method.py  helper_functions.py  main.py  meshHelper.py  mms.py  optHelper.py  optimization.py  plotResults.py  plot_adjoint_tests.py  plotlog.py  result.txt  results.txt
src/: MMSerror.py  adjointMethod.cpp  main.cpp  meshHelper.hpp  meshSolver.hpp  mms.cpp  optHelper.hpp  optimization.hpp  plot_result.py  plotlog.py  profile_optimization.cpp
test/: adjointTest.py  test1.cpp  testFramework.hpp  test_adjoint.cpp  test_mms.cpp  test_optimization.cpp  test_subfunctions_optimization.cpp
ui/: MMSerror.py  plot_adjoint.py  plot_result.py
